--- a/templates/encode.html
+++ b/templates/encode.html
@@ -18,16 +18,18 @@
 				'\n' + 
 				footer_block + 
 				'\n\n' +
-				context.instructions
+				context.instructions +
+				'\n\n . . . .\n' +
+				context.footer
 				
 			return message
 		}
 		
 		function encode() {
 			const message = secrets.str2hex(document.getElementById('input-message').value)
-			const num_shares = parseInt(document.getElementById('number-shares').value, 10)
+			const names = get_names()
 			const threshhold = parseInt(document.getElementById('number-required').value, 10)
-			const shares = secrets.share(message, num_shares, threshhold)
+			const shares = secrets.share(message, names.length, threshhold)
 			
 			let shares_div = document.getElementById('shares')
 			while( shares_div.firstChild ) {
@@ -37,6 +39,11 @@
 			for (const [index, share] of shares.entries()) {
 				let share_div = document.createElement('div')
 				share_div.classList.add('region')
+				
+				let rcpt = document.createElement('h3')
+				rcpt.innerText = `For ${names[index]}`
+				share_div.appendChild(rcpt)
+				
 				let share_text = document.createElement('textarea')
 				share_text.id = `share-${index}`
 				share_text.value = assemble_message(share)
@@ -52,7 +59,7 @@
 				
 				let done = document.createElement('span')
 				const done_id = `done-${index}`
-				done.innerHTML = `<input id="${done_id}" type="checkbox" ><label for="${done_id}">Done</label>`
+				done.innerHTML = `<input id="${done_id}" type="checkbox" ><label for="${done_id}">Sent</label>`
 				share_div.appendChild(done)
 				
 				shares_div.appendChild(share_div)
@@ -60,6 +67,40 @@
 			
 			document.getElementById('results').style.display = 'block'
 		}
+		
+		function get_names() {
+			const names = []
+			for (let index =1; index <= num_names; ++index) {
+				names.push( document.getElementById(`name-${index}`).value )
+			}
+			return names
+		}
+		
+		let num_names = 0 
+		function add_name() {
+			num_names += 1
+			const child = document.createElement('input')
+			child.placeholder = `Person #${num_names}`
+			child.id = `name-${num_names}`
+			document.getElementById('share-names').appendChild(child)			
+		}
+		
+		function remove_name() {
+			if (num_names < 1) {
+				return
+			}
+			
+			const to_remove = document.getElementById(`name-${num_names}`)
+			document.getElementById('share-names').removeChild(to_remove)
+			num_names -=1
+		}
+		
+		window.onload = () => {
+			add_name()
+			add_name()
+			add_name()
+		}
+		
 	</script>
 </head>
 <body>
@@ -67,32 +108,38 @@
 <h1>Edaqa's Secret Sharing</h1>
 <h2>A secret sharing tool by by <a href='https://edaqa.com/'>Edaqa Mortoray</a></h2>
 
-<p>Here you can create a shared secret that can be recovered if enough participants combine their keys.</p>
+<p>Use this tool to allow friends, colleagues, and loved ones, gain access to your systems in case of an emergency. It allows you to break a secret into parts, and if enough recipients agree to combine their parts, the initial secret can be recovered.</p>
 
 <div class='field'>
-<em>Secret Message</em>:<br/>
+<h3>Secret Message</h3>
 <textarea id='input-message' class='large'></textarea>
 <i>This contains the secret information. It should only contain data that can be revocable or changed, such as passwords or keys to documents, applications, and websites.</i>
 </div>
 
 <div class='field'>
-<em>Public Message</em>:<br/>
+<h3>Public Message</h3>
 <textarea id='public-message' class='large'></textarea>
 <i>This message will *not* be encrypted, but added as a clear text header to the recipient instructions.</i>
 </div>
 
 <div class='field'>
-<em>Number of Shares</em>: <input id='number-shares'><br/>
-<i>How many people would you like to share the secret with?</i>
+	<h3>Who would like to share it with?</h3>
+	<span id='share-names'></span>
+	<button onclick='add_name()'>+</button>
+	<button onclick='remove_name()'>-</button>
+	<br/>
+	<i>This list of people is <b>not</b> included in the message. You need to ensure they know how to find each other.</i>
 </div>
 
+
 <div class='field'>
-<em>Number required to decode</em>: <input id='number-required'><br/>
-<i>What's the minimum number of people required who can combine their codes to restore the original secret?</i>
+	<h3>How many are needed to decode?</h3>
+	<input id='number-required' type="number" min="1"><br/>
+	<i>This is the minimum number of people required who can combine their codes to restore the original secret.</i>
 </div>
 
 <div class='cta'>
-<button onclick='encode()'>Encode</button>
+<button onclick='encode()'>Encode</button></br>
 </div>
 </div>
 
@@ -100,11 +147,9 @@
 	<div>
 		Download the <a href='./edaqas-secrets-decoder.html' download>decoder</a> (right-click "Save As"), attach it to the message you send to each recipient. This is important as a public decoder may not be available in the future.
 	</div>
+	<div>Use the "Sent" checkbox to track who've you sent the code to. Be aware that you can't regenerate codes later. Pressing "Encode" again will generate an entirely new set of codes that must be sent to the recipients.</div>
 	
-<div id='shares'>
-	
-	
-</div>
+<div id='shares'></div>
 </div>
 
 <footer class='region'>
