--- a/templates/style.css
+++ b/templates/style.css
@@ -14,6 +14,12 @@ h1 + h2 {
 	font-style: italic;
 }
 
+h3 {
+	font-weight: bold;
+	font-size: 100%;
+	margin-bottom: 0.5em;
+}
+
 .region {
 	margin: 1em auto;
 	background: white;
@@ -33,7 +39,7 @@ textarea.large {
 }
 
 .field {
-	margin: 1em 0;
+	margin: 1.5em 0;
 }
 
 em {
@@ -43,4 +49,8 @@ em {
 
 .cta {
 	text-align: center;
+}
+
+input {
+	margin: 0 1em;
 }
