--- a/templates/style.css
+++ b/templates/style.css
@@ -2,6 +2,16 @@ html {
 	background: #CCC;
 }
 
+a {
+	color: inherit;
+	text-decoration: none;
+	border-bottom: thin dotted #457b9d;
+}
+
+h1, h2, h3 {
+	color: #457b9d;
+}
+
 h1 { 
 	margin-top: 0;
 	margin-bottom: 1rem;
@@ -24,7 +34,15 @@ h3 {
 	margin: 1em auto;
 	background: white;
 	max-width: 60em;
-	padding: 1em;
+	padding: 1em 2em;
+	border-radius: 5px;
+	color: #1d3557;
+	box-shadow: 0px 0px 5px #457b9d;
+}
+
+.info {
+	margin-top: 0.5em;
+	font-style: italic;
 }
 
 textarea {
@@ -32,6 +50,11 @@ textarea {
 	width: 100%;
 	height: 5em;
 	resize: vertical;
+}
+
+textarea, input {
+	background: #F0F9F9;
+	color: black;
 }
 
 textarea.large {
