--- a/templates/style.css
+++ b/templates/style.css
@@ -56,6 +56,9 @@ textarea, input {
 	background: #F0F9F9;
 	color: black;
 }
+textarea[readonly] {
+	background: #F9F9F9;
+}
 
 textarea.large {
 	height: 10em;
