improve layout text

--- a/templates/encode.html
+++ b/templates/encode.html
@@ -148,11 +148,11 @@
 </div>
 
 <div class='region' id='results' style='display: none;'>
-	<div>
+	<p>
 		Download the <a href='./edaqas-secrets-decoder.html' download>decoder</a> (right-click "Save As"), attach it to the message you send to each recipient. This is important as a public decoder may not be available in the future.
-	</div>
-	<div>Use the "Sent" checkbox to track who've you sent the code to. Be aware that you can't regenerate codes later. Pressing "Encode" again will generate an entirely new set of codes that must be sent to the recipients.</div>
-	<div>Only send messages on secure channels, such as Signal or encrypted email. Anybody who could intercept enough messages can recover the secret.</div>
+	</p>
+	<p>Use the "Sent" checkbox to track who've you sent the code to. Be aware that you can't regenerate codes later. Pressing "Encode" again will generate an entirely new set of codes that must be sent to the recipients.</p>
+	<p>Only send messages on secure channels, such as Signal or encrypted email. Anybody who could intercept enough messages can recover the secret.</p>
 	
 <div id='shares'></div>
 </div>
